--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # dependencies
 /node_modules
+/heroku-server/node_modules
+
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
@@ -17,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
