--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "stopwatch",
-  "homepage": "https://matthiasnyman.github.io/react-assignment",
+  "homepage": "https://matthiasnyman.github.io/react-assignment/",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
     "humanize-duration": "^3.21.0",
@@ -23,7 +24,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": "react-app"
   },
